# finki-mcp

./: .env.sample  .gitignore  .gitmodules  .sonarcloud.properties  README.md  compose.prod.yaml  compose.yaml
.github/: dependabot.yaml
.github/workflows/: docker-content-api.yaml  docker-local-mcp.yaml  docker-public-mcp.yaml  docker.yaml  lint.yaml
local-mcp/: .dockerignore  Dockerfile  pyproject.toml
local-mcp/app/: main.py
local-mcp/app/schemas/: course_participants.py  course_staff.py
local-mcp/app/tools/: course_participants.py  course_staff.py
local-mcp/app/utils/: http_client.py  query_matcher.py  settings.py
local-mcp/tools/: consultations.py  staff.py
local-mcp/utils/: settings.py
